2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: Fix code style nits and tweak report.  Stop
	superfluously using braces for shell parameter expansions that
	don't require them.  The shell is not make(1).  Say
	"installation _directory_ prefix" since another kind of prefix
	can be used by groff (the "g" in front of command and macro
	package names shared with AT&T troff).

2022-05-31  Dave Kemper <saint.snit@gmail.com>

	* doc/groff.texi: Fix content and style nits.
	  - Remove redundancy ("fixed-width... character that can't be
	    adjusted").
	  - Fix incorrect word ("environment value" -> "environment
	    variable").
	  - Add or change the placement of a couple tie{}s to comport
	    with style-guide recommendation.
	  - Grammarify.
	  - Clarify and tighten wording.

	Fixes <https://savannah.gnu.org/bugs/?62551>.

2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/roff/troff/node.cpp (font_position): If mounting a font
	fails and a third argument was given (to the `fp` request),
	report its value in the diagnostic message.  This could reveal a
	prohibited attempt at directory traversal.  See commit
	a891161bc9, 7 November.

2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/libs/libgroff/fontfile.cpp (font::open_file): Refactor.
	Move more logic, including memory allocation, inside conditional
	that accepts only file names without '/' characters, skipping
	unnecessary work in the alternative.  Annotate use of zero
	literals as null pointers to ease any future migration to ISO
	C++11.  Add 'const' qualifier to variable that doesn't require
	modification (and which is used in the LHS of an equality
	comparison, so that clumsy operator misuse will provoke a
	compiler warning).

	Fixes <https://savannah.gnu.org/bugs/?62532>.  Thanks to Bjarni
	Ingi Gislason for the report.

2022-05-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* configure.ac: In configuration report, say that we're