@@ -1,5 +1,12 @@
 2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>
 
+	* configure.ac: Report use of "g" prefix for commands and macro
+	package compatibility wrappers.
+	* m4/groff.m4 (GROFF_G): Fix code style nits.  Update
+	indentation to match recent practice.
+
+2022-05-31  G. Branden Robinson <g.branden.robinson@gmail.com>
+
 	* configure.ac: Fix code style nits and tweak report.  Stop
 	superfluously using braces for shell parameter expansions that
 	don't require them.  The shell is not make(1).  Say
